fidoconfig 0.10
---------------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Thu Jul 27 18:17:50 NOVST 2000
max:
* added cfg.c to source tree

----- cvs ci ------
Thu Jul 26 18:17:50 NOVST 2000
max (patch from Pavel Gulchouk):
* set, if, else, elseif, ifdef, ifndef, endif
* arealink option -def
* -Dvar=value in tparser parameters (example: "tparser -Dmodule=hpt")
* link option davancedAreaFix

----- cvs ci ------
Tue Jul 18 22:51:16 NOVST 2000
max:
* fgetsUntil0 modification

----- cvs ci ------
Sun Jul  9 20:01:16 NOVST 2000
max:
* added ignoreSeen

----- cvs ci ------
Tue Jul  4 22:36:41 NOVST 2000
max:
* add -killsb to echoarea options

----- cvs ci ------
Fri Jul  3 22:10:40 NOVST 2000
max:
* [envvar] supported under all platforms, `cmd` in UNIX & OS/2+EMX

----- cvs ci ------
Sun Jul  2 16:13:24 NOVST 2000
max:
* fixed broken fidoconf (`cmd` & [envvar] parses only in UNIX & OS/2)

----- cvs ci ------
Sat Jul  1 12:44:09 NOVST 2000
max:
* fixed core dump when -a <addr> in echoarea not found (Alex Belozuerov)
* parsePublic code cleanup

----- cvs ci ------
Fri Jun 30 23:25:08 NOVST 2000
max (patch from Pavel Gulchouk):
* `cmd` & [envvar] parsing

----- cvs ci ------
Tue Jun 27 22:54:18 NOVST 2000
max:
* parsePath() optimization

----- cvs ci ------
Sat Jun 24 19:44:32 NOVST 2000
max:
* fixed firectory checking when parsing auto(area|file)createfile
* fixed dublicated file parsing

----- cvs ci ------
Thu Jun 22 15:40:00 MSK 2000
Nestyurkin Nikolay:
* changed Watcom makefiles to use makefile.inc
* minor changes in makefile.inc

----- cvs ci ------
Wed Jun 21 17:50:00 MSK 2000
Nestyurkin Nikolay:
* removed $(FECFG2FCONF)$(EXE) from makefile.inc

----- cvs ci ------
Wed Jun 21 13:44:01 NOVST 2000
max:
* carbonOut token

----- cvs ci ------
Wed Jun 21 01:21:00 MSK 2000
Nestyurkin Nikolay:
* added $(FECFG2FCONF)$(EXE) to makefile.inc

----- cvs ci ------
Tue Jun 20 23:26:07 MSK 2000
Nestyurkin Nikolay: